2003-01-22  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (get_fourcc_string), (gtk_xine_open),
	(gtk_xine_stop), (gtk_xine_close), (gtk_xine_get_position),
	(gtk_xine_can_set_volume), (gtk_xine_get_volume),
	(gtk_xine_get_stream_length), (gtk_xine_get_metadata_string),
	(gtk_xine_get_metadata_int), (gtk_xine_get_metadata_bool),
	(gtk_xine_get_metadata):
	* src/totem.c: (on_error_event): boatloads of little fixes for
	crashers and don't skip files on error

2003-01-22  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_stop): fix a deadlock when there is no
	demuxer for the video/audio we're trying to play

2003-01-22  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_add_mrl): make it so we can add
	application/x-ogg files as well

2003-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_new): use the arguments to find
	the glade file, not the old code

2003-01-20  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-cd-selection.c: (cdrom_option_menu),
	(bacon_cd_selection_set_device):
	* src/bacon-cd-selection.h:
	* src/cd-drive.c: (parse_sg_line), (get_cd_scsi_id),
	(lookup_scsi_unit), (get_scsi_cd_name), (add_linux_cd_recorder),
	(cdrom_get_name), (add_linux_cd_drive), (get_cd_device_file),
	(linux_scan), (scan_for_cdroms):
	* src/cd-drive.h:
	* src/egg-recent-model.c: (egg_recent_model_add_full): update from
	libegg and libbacon (Closes: #103419)

2003-01-20  Bastien Nocera  <hadess@hadess.net>

	* README:
	* src/totem.c: (update_sliders), (totem_action_handle_key),
	(on_window_key_press_event): ignore key presses if there's a modifier,
	add "S" as a shortcut for "Skip to" and update the README

2003-01-20  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/gtk-xine-properties.c: (gtk_xine_properties_time_to_string),
	(gtk_xine_properties_set_from_current):
	* src/gtk-xine-properties.h:
	* src/totem.c: (update_mrl_label), (commit_hide_skip_to),