@@ -1,3 +1,13 @@
+2003-01-23  Bastien Nocera  <hadess@hadess.net>
+
+	* src/gtk-xine.c: (xine_error), (get_fourcc_string),
+	(gtk_xine_open):
+	* src/gtk-xine.h:
+	* src/totem.c: (on_error_event): simplify the i18n code in GtkXine,
+	added support for the "malformed mrl" error, made GTX_NO_CODEC work
+	properly (garbage in the name, and static variable in get_fourcc_string
+	removed)
+
 2003-01-22  Bastien Nocera  <hadess@hadess.net>
 
 	* src/gtk-xine.c: (get_fourcc_string), (gtk_xine_open),
